# Genetics

./: CMakeLists.txt  README.md  main.cpp
Chromosomes/: chromosome.cpp  chromosome.h  world.cpp  world.h
Utility/: random.cpp  random.h
